spark-webui.yaml
kind: Service
apiVersion: v1
metadata:
  name: sb-instanceid-smw
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    servicebroker: sb-instanceid-spark-master
