zeppelin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sb-instanceid-zeppelin
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    servicebroker: sb-instanceid-zeppelin
