spark-master-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-spark-webui
spec:
  host: sb-instanceid-spark-master-webui-servicebroker.app.asiainfodata.com
  to:
    kind: Service
    name: sb-instanceid-smw
